Move some preprocessing to earlier stage

--- a/emoji_embedding/0_analyze_emoji_data.ipynb
+++ b/emoji_embedding/0_analyze_emoji_data.ipynb
@@ -287,18 +287,47 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "905ca256-cbe9-4aed-8633-95284e3e4465",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdf[\"emoji_name_og\"] = mdf.emjpd_emoji_name_og.where(\n",
+    "    mdf.emjpd_emoji_name_og.notna(), mdf.hemj_emoji_name_og\n",
+    ").fillna(\"\")\n",
+    "\n",
+    "for col in [\n",
+    "    \"emoji_name_og\",\n",
+    "    \"emjpd_emoji_name_og\",\n",
+    "    \"hemj_emoji_name_og\",\n",
+    "    \"emjpd_full_description\",\n",
+    "    \"emjpd_description_main\",\n",
+    "    \"emjpd_description_side\",\n",
+    "    \"hemj_emoji_description\",\n",
+    "    \"emjpd_usage_info\",\n",
+    "]:\n",
+    "    mdf[col] = mdf[col].str.lower()\n",
+    "\n",
+    "mdf[\"emjpd_aliases\"] = mdf[\"emjpd_aliases\"].apply(\n",
+    "    lambda x: [s.lower() for s in x] if isinstance(x, list) else []\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fab91181-8495-47bd-9908-a2220db4cfff",
    "metadata": {},
    "outputs": [],
    "source": [
     "cols = [\n",
     "    \"emoji_char\",  # emoji-symbol/picture\n",
+    "    \"emoji_name_og\",  # emojipedia emoji name if available, otherwise hotemoji name, otherwise \"\"\n",
     "    \"emoji_char_ascii\",  # emoji expressed in ascii\n",
     "    \"emoji_char_bytes\",  # emoji expressed as bytes (only for hotemoji)\n",
     "    \"emjpd_emoji_name\",  # emojipedia emoji name (corresponds to folder in scrapped data)\n",
-    "    \"emjpd_emoji_name_og\",  # emojipedia emoji name as is in the heading on website (Capitalized, with space)\n",
-    "    \"hemj_emoji_name\",  # hotemoji emoji name (_ instead of spaces, lowercase)\n",
-    "    \"hemj_emoji_name_og\",  # hotemoji emoji name (Capitalized, with space)\n",
+    "    \"emjpd_emoji_name_og\",  # emojipedia emoji name as is in the heading on website\n",
+    "    \"hemj_emoji_name\",  # hotemoji emoji name (_ instead of spaces)\n",
+    "    \"hemj_emoji_name_og\",  # hotemoji emoji name\n",
     "    \"emjpd_aliases\",  # emojipedia aliases for emoji\n",
     "    \"emjpd_shortcodes\",  # emojipedia shortcuts for slack/github etc.\n",
     "    \"emjpd_full_description\",  # emojipedia all description data scraped unprocessed in utf-8\n",
