--- a/emoji_embedding/1_avg_word_vectors.ipynb
+++ b/emoji_embedding/1_avg_word_vectors.ipynb
@@ -46,22 +46,7 @@
     "df.emjpd_aliases = df.emjpd_aliases.apply(\n",
     "    lambda x: ast.literal_eval(x) if isinstance(x, str) else []\n",
     ")\n",
-    "df.emjpd_aliases = df.emjpd_aliases.apply(lambda x: \" \".join(x))\n",
-    "for col in [\n",
-    "    \"emjpd_emoji_name_og\",\n",
-    "    \"hemj_emoji_name_og\",\n",
-    "    \"emjpd_aliases\",\n",
-    "    \"emjpd_full_description\",\n",
-    "    \"emjpd_description_main\",\n",
-    "    \"emjpd_description_side\",\n",
-    "    \"hemj_emoji_description\",\n",
-    "    \"emjpd_usage_info\",\n",
-    "]:\n",
-    "    df[col] = df[col].str.lower()\n",
-    "\n",
-    "df[\"emoji_name_og\"] = (\n",
-    "    df.emjpd_emoji_name_og.fillna(\"\") + \" \" + df.hemj_emoji_name_og.fillna(\"\")\n",
-    ")"
+    "df.emjpd_aliases = df.emjpd_aliases.apply(lambda x: \" \".join(x))"
    ]
   },
   {
@@ -113,36 +98,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea2eeb84-6794-4f24-b811-b1492a3706de",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getWords(text):\n",
-    "    \"\"\"Returns list of all words (and numbers) in a given text. \n",
-    "    Special characters and punctuation are ignored. \n",
-    "    \"\"\"\n",
-    "    print(text, \"\\n\")\n",
-    "    return re.compile(\"\\w+\").findall(text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "53fd8209-8f24-4b96-a317-01186bbc3101",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_vector(text, default=np.zeros(200, dtype=np.float32)):\n",
     "    \"\"\"Given a string or a list of words (in lower case)\n",
-    "    the average word vector for all words that can be found \n",
-    "    in the embedding vocabulary is returned. Words that can't be found \n",
-    "    are not included in the average calculation. If no word is in the \n",
-    "    embedding vocaublary the default (vector of 0s) is returned. \n",
-    "    \n",
+    "    the average word vector for all words that can be found\n",
+    "    in the embedding vocabulary is returned. Words that can't be found\n",
+    "    are not included in the average calculation. If no word is in the\n",
+    "    embedding vocaublary the default (vector of 0s) is returned.\n",
+    "\n",
     "    Returns: {np.array}\n",
     "    \"\"\"\n",
     "    words = []\n",
     "    if isinstance(text, str) and len(text) > 0:\n",
+    "        # Returns list of all words (and numbers) in a given text.\n",
+    "        # Special characters and punctuation are ignored.\n",
     "        words = re.compile(\"\\w+\").findall(text)\n",
     "    elif isinstance(text, list):\n",
     "        words = text\n",
@@ -162,19 +134,19 @@
    "outputs": [],
    "source": [
     "def get_embedding(weighting, df):\n",
-    "    \"\"\"Returns average word embedding for emojis given weighting rule. For \n",
-    "    each column specified in weighting the average embedding will be calculated. \n",
-    "    The embeddings of the columns are averaged with the specified weights \n",
-    "    (weights don't have to sum to 1). \n",
-    "    \n",
-    "    Params: \n",
-    "        - weighting {dictionary}: dictionary containing weights for columns that are to \n",
+    "    \"\"\"Returns average word embedding for emojis given weighting rule. For\n",
+    "    each column specified in weighting the average embedding will be calculated.\n",
+    "    The embeddings of the columns are averaged with the specified weights\n",
+    "    (weights don't have to sum to 1).\n",
+    "\n",
+    "    Params:\n",
+    "        - weighting {dictionary}: dictionary containing weights for columns that are to\n",
     "                    be considered in the weighted average calculation of word embeddings\n",
-    "        - df {pd.DataFrame}: Dataframe with different emojis in each row and their descriptions, \n",
-    "                    in particular it has the columns specified in weighting. The descriptions are taken \n",
-    "                    for the word embedding average calculation. \n",
-    "                    \n",
-    "    Returns: \n",
+    "        - df {pd.DataFrame}: Dataframe with different emojis in each row and their descriptions,\n",
+    "                    in particular it has the columns specified in weighting. The descriptions are taken\n",
+    "                    for the word embedding average calculation.\n",
+    "\n",
+    "    Returns:\n",
     "        - {pd.Series}: pandas Series of np.arrays that contain the word embeddings for the emojis\n",
     "    \"\"\"\n",
     "    result = []\n",
