--- a/emoji_embedding/3_test_img2vec.ipynb
+++ b/emoji_embedding/3_test_img2vec.ipynb
@@ -21,7 +21,7 @@
     "import torch.nn as nn\n",
     "from cnn import Img2Vec\n",
     "\n",
-    "from emoji_images import EmojiImageDataset, plot\n",
+    "from emoji_images import EmojiClassificationDataset, plot\n",
     "import utils\n",
     "\n",
     "import pandas as pd"
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = EmojiImageDataset(\"train\")"
+    "X_train = EmojiClassificationDataset(\"train\")"
    ]
   },
   {
