Bugfix and remove duplicates

--- a/emoji_embedding/0_analyze_emoji_data.ipynb
+++ b/emoji_embedding/0_analyze_emoji_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "bbf243f7-c35b-4f0b-ab3f-ddfa5efcaa47",
    "metadata": {},
    "outputs": [],
@@ -20,21 +20,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9d65f09d-04df-454d-9d6f-e7b7ae0e1fa2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "import os\n",
-    "\n",
-    "import random"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "dbd2b073-f7f6-43ea-88bf-522eb3d4e951",
    "metadata": {},
    "outputs": [],
@@ -55,14 +53,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3ea33bbb-32b2-418b-987a-4fcf4bd4a845",
    "metadata": {},
    "outputs": [],
    "source": [
     "hemj_df = (\n",
     "    pd.read_csv(\"data/hotemoji_description_raw.csv\")\n",
-    "    .dropna(subset=\"emoji_char\")\n",
+    "    .dropna(subset=[\"emoji_char\"])\n",
     "    .rename(\n",
     "        columns={\n",
     "            \"emoji_char\": \"emoji_char_bytes\",\n",
@@ -75,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "dd37ef87-16d7-42e5-95c6-15efd6a81647",
    "metadata": {},
    "outputs": [],
@@ -96,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "584d0b4c-e2d8-47e6-95bf-0fe77006cf5f",
    "metadata": {},
    "outputs": [],
@@ -113,17 +111,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "f1927328-8d32-4724-bd41-775a39839d07",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hemj_df.hemj_emoji_description = hemj_df.hemj_emoji_description.apply(decode)"
+    "hemj_df.hemj_emoji_description = hemj_df.hemj_emoji_description.apply(decode)\n",
+    "hemj_df = hemj_df.drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "0b2ea0a1-7b04-41fe-b389-432d8a24bb16",
    "metadata": {},
    "outputs": [],
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b736cfcb-f014-40a8-8556-67ea17b9749b",
    "metadata": {},
    "outputs": [],
@@ -151,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "46f6cb48-114e-470e-ac4a-060c3d42a235",
    "metadata": {},
    "outputs": [],
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "6455a8b1-ca7d-471f-8fce-13bc8eead276",
    "metadata": {},
    "outputs": [],
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "ced1f756-a2f1-4c6b-8344-281c89375e2a",
    "metadata": {},
    "outputs": [],
@@ -244,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "8dbefd08-79d2-46f4-b483-4a477febad40",
    "metadata": {},
    "outputs": [],
@@ -258,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "04044b2d-af14-4a68-969d-b2c6040c3373",
    "metadata": {},
    "outputs": [],
@@ -276,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b0512b04-db3a-46e9-bccd-e61b695ff5d8",
    "metadata": {},
    "outputs": [],
@@ -286,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "905ca256-cbe9-4aed-8633-95284e3e4465",
    "metadata": {},
    "outputs": [],
@@ -314,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "fab91181-8495-47bd-9908-a2220db4cfff",
    "metadata": {},
    "outputs": [],
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d0ab8ffc-349d-47e4-91bb-738b0dac03b3",
    "metadata": {},
    "outputs": [],
@@ -351,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "6176949b-deca-4f35-a669-8b5bada5b17c",
    "metadata": {},
    "outputs": [],
