--- a/emoji_embedding/3_test_img2vec.ipynb
+++ b/emoji_embedding/3_test_img2vec.ipynb
@@ -21,9 +21,7 @@
     "import torch.nn as nn\n",
     "from cnn import Img2Vec\n",
     "\n",
-    "from emoji_images import EmojiClassificationDataset, plot\n",
-    "from torch.utils.data import DataLoader\n",
-    "import utils\n",
+    "from emoji_images import EmojiClassificationDataset\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -98,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Img2Vec(200, \"model/emoji_image_embedding/res18_semi_siamese_epoch20.ckpt\")\n",
+    "model = Img2Vec(200, \"model/emoji_image_embedding/emimem.ckpt\")\n",
     "model.eval()\n",
     "\n",
     "sim = nn.CosineSimilarity()"
