Add column to emoji description, make left join

--- a/emoji_embedding/0_preprocess_emoji_data.ipynb
+++ b/emoji_embedding/0_preprocess_emoji_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bbf243f7-c35b-4f0b-ab3f-ddfa5efcaa47",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "9d65f09d-04df-454d-9d6f-e7b7ae0e1fa2",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dbd2b073-f7f6-43ea-88bf-522eb3d4e951",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3ea33bbb-32b2-418b-987a-4fcf4bd4a845",
    "metadata": {},
    "outputs": [],
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "dd37ef87-16d7-42e5-95c6-15efd6a81647",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "584d0b4c-e2d8-47e6-95bf-0fe77006cf5f",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f1927328-8d32-4724-bd41-775a39839d07",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0b2ea0a1-7b04-41fe-b389-432d8a24bb16",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "b736cfcb-f014-40a8-8556-67ea17b9749b",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "46f6cb48-114e-470e-ac4a-060c3d42a235",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "6455a8b1-ca7d-471f-8fce-13bc8eead276",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "ced1f756-a2f1-4c6b-8344-281c89375e2a",
    "metadata": {},
    "outputs": [],
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "8dbefd08-79d2-46f4-b483-4a477febad40",
    "metadata": {},
    "outputs": [],
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "04044b2d-af14-4a68-969d-b2c6040c3373",
    "metadata": {},
    "outputs": [],
@@ -275,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "b0512b04-db3a-46e9-bccd-e61b695ff5d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdf = df.merge(hemj_df, how=\"outer\", on=[\"emoji_char\", \"emoji_char_ascii\"])"
+    "mdf = df.merge(hemj_df, how=\"left\", on=[\"emoji_char\", \"emoji_char_ascii\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "905ca256-cbe9-4aed-8633-95284e3e4465",
    "metadata": {},
    "outputs": [],
@@ -293,6 +293,10 @@
     "mdf[\"emoji_name_og\"] = mdf.emjpd_emoji_name_og.where(\n",
     "    mdf.emjpd_emoji_name_og.notna(), mdf.hemj_emoji_name_og\n",
     ").fillna(\"\")\n",
+    "\n",
+    "mdf[\"emoji_char_ascii_beg\"] = mdf.emoji_char_ascii.apply(\n",
+    "    lambda x: \"\\\\\" + [y for y in x.split(\"\\\\\") if len(y) > 0][0]\n",
+    ")\n",
     "\n",
     "for col in [\n",
     "    \"emoji_name_og\",\n",
@@ -313,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "fab91181-8495-47bd-9908-a2220db4cfff",
    "metadata": {},
    "outputs": [],
@@ -322,6 +326,7 @@
     "    \"emoji_char\",  # emoji-symbol/picture\n",
     "    \"emoji_name_og\",  # emojipedia emoji name if available, otherwise hotemoji name, otherwise \"\"\n",
     "    \"emoji_char_ascii\",  # emoji expressed in ascii\n",
+    "    \"emoji_char_ascii_beg\",  # the first emoji part expressed as ascii\n",
     "    \"emoji_char_bytes\",  # emoji expressed as bytes (only for hotemoji)\n",
     "    \"emjpd_emoji_name\",  # emojipedia emoji name (corresponds to folder in scrapped data)\n",
     "    \"emjpd_emoji_name_og\",  # emojipedia emoji name as is in the heading on website\n",
@@ -340,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "d0ab8ffc-349d-47e4-91bb-738b0dac03b3",
    "metadata": {},
    "outputs": [],
@@ -350,13 +355,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "6176949b-deca-4f35-a669-8b5bada5b17c",
    "metadata": {},
    "outputs": [],
    "source": [
     "mdf.to_csv(\"data/processed/emoji_descriptions.csv\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3569d0-a970-4d83-9fc3-863d701b5237",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
