Restructure files including renaming

--- a/emoji_embedding/3_test_img2vec.ipynb
+++ b/emoji_embedding/3_test_img2vec.ipynb
@@ -21,7 +21,7 @@
     "import torch.nn as nn\n",
     "from cnn import Img2Vec\n",
     "\n",
-    "from emoji_images import EmojiClassificationDataset\n",
+    "from emoji_image_dataset import EmojiClassificationDataset\n",
     "\n",
     "import pandas as pd\n",
     "\n",
