Update embedding analysis notebook

--- a/emoji_embedding/3_test_img2vec.ipynb
+++ b/emoji_embedding/3_test_img2vec.ipynb
@@ -21,7 +21,7 @@
     "import torch.nn as nn\n",
     "from cnn import Img2Vec\n",
     "\n",
-    "from emoji_image_dataset import EmojiClassificationDataset\n",
+    "from emoji_image_dataset import EmojiImageDataset\n",
     "\n",
     "import pandas as pd\n",
     "\n",
@@ -39,46 +39,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ddd726a2-b745-4d07-b32b-8c6055b9e584",
+   "id": "4c824436-51f1-40cf-a68d-4f28f8e385a2",
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"data/processed/emoji_descriptions.csv\")[\n",
-    "    [\"emjpd_emoji_name\", \"emoji_char\"]\n",
-    "].drop_duplicates()\n",
-    "df.columns = [\"label\", \"emoji_char\"]"
+    "    [\"emoji_name\", \"emoji_char\"]\n",
+    "].drop_duplicates()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40c71daa-e716-4035-9811-34402a084aea",
+   "id": "a003cce2-e907-49f3-831b-ca2a2457cb2e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = EmojiClassificationDataset(\"train\", label_flag=False)\n",
-    "df_train = (\n",
-    "    pd.read_csv(\"data/meta/img_meta_train.csv\")\n",
-    "    .drop_duplicates(subset=\"label\")\n",
-    "    .reset_index()\n",
-    "    .rename(columns={\"index\": \"old_index\"})\n",
-    ").merge(df, how=\"left\")"
+    "X_train = EmojiImageDataset(\"train\")\n",
+    "df_train = X_train.df.reset_index(drop=True).merge(df)\n",
+    "df_train[\"old_index\"] = df_train.index\n",
+    "df_train = df_train.drop_duplicates(subset=\"emoji_name\").reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5774e27f-5ea8-44e7-bd6c-4a20945ecb12",
+   "id": "2d420f69-8ee4-4c9b-9ccd-409a0c4e427c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_zero = EmojiClassificationDataset(\"zeroshot\", label_flag=False)\n",
-    "df_zero = (\n",
-    "    pd.read_csv(\"data/meta/img_meta_zeroshot.csv\")\n",
-    "    .drop_duplicates(subset=\"label\")\n",
-    "    .reset_index()\n",
-    "    .rename(columns={\"index\": \"old_index\"})\n",
-    ").merge(df, how=\"left\")"
+    "X_zero = EmojiImageDataset(\"zero\")\n",
+    "df_zero = X_zero.df.reset_index(drop=True).merge(df)\n",
+    "df_zero[\"old_index\"] = df_zero.index\n",
+    "df_zero = df_zero.drop_duplicates(subset=\"emoji_name\").reset_index(drop=True)"
    ]
   },
   {
@@ -141,8 +134,8 @@
    "source": [
     "%%time\n",
     "embeddings_train = create_embeddings(X_train, df_train)\n",
-    "index_label_train = df_train.label.to_dict()\n",
-    "label_emoji = {k:v for k, v in zip(df_train.label, df_train.emoji_char)}\n",
+    "index_label_train = df_train.emoji_name.to_dict()\n",
+    "label_emoji = {k:v for k, v in zip(df_train.emoji_name, df_train.emoji_char)}\n",
     "ea_train = EmbeddingAnalysis(embeddings_train, index_label_train, label_emoji)"
    ]
   },
@@ -155,8 +148,8 @@
    "source": [
     "%%time \n",
     "embeddings_zero = create_embeddings(X_zero, df_zero)\n",
-    "index_label_zero = df_zero.label.to_dict()\n",
-    "label_emoji = {k:v for k, v in zip(df_zero.label, df_zero.emoji_char)}\n",
+    "index_label_zero = df_zero.emoji_name.to_dict()\n",
+    "label_emoji = {k:v for k, v in zip(df_zero.emoji_name, df_zero.emoji_char)}\n",
     "ea_zero = EmbeddingAnalysis(embeddings_zero, index_label_zero, label_emoji)"
    ]
   },
@@ -168,8 +161,8 @@
    "outputs": [],
    "source": [
     "df_total = pd.concat([df_train, df_zero]).reset_index(drop=True)\n",
-    "index_label_total = df_total.label.to_dict()\n",
-    "label_emoji_total = {k: v for k, v in zip(df_total.label, df_total.emoji_char)}\n",
+    "index_label_total = df_total.emoji_name.to_dict()\n",
+    "label_emoji_total = {k: v for k, v in zip(df_total.emoji_name, df_total.emoji_char)}\n",
     "embeddings_total = torch.cat([embeddings_train, embeddings_zero], dim=0)\n",
     "ea_total = EmbeddingAnalysis(embeddings_total, index_label_total, label_emoji_total)"
    ]
@@ -295,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_total.loc[df_total[\"class\"].isna()].sample(10)"
+    "df_total.loc[df_total.dataset_type == \"zero\"].sample(10)"
    ]
   },
   {
@@ -441,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef0345d0-e97b-4186-9e8a-f0fdca362c9b",
+   "id": "0a605165-f691-4d14-9d9f-e7153320926f",
    "metadata": {},
    "outputs": [],
    "source": []
