--- a/emoji_embedding/3_test_img2vec.ipynb
+++ b/emoji_embedding/3_test_img2vec.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "from cnn import Img2Vec\n",
+    "from ee_model import Img2Vec\n",
     "\n",
     "from emoji_image_dataset import EmojiImageDataset\n",
     "\n",
