Remove zero shot emojis from testset

--- a/twemoji/create_balanced_dataset.ipynb
+++ b/twemoji/create_balanced_dataset.ipynb
@@ -89,6 +89,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7dae320e-7d0c-4e18-8151-48e5bf5c02e3",
+   "metadata": {},
+   "source": [
+    "### remove zero shot emojis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13987fc1-9737-44c2-bd7e-765ea2c5b8ef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_keys = pd.read_csv(\"../emoji_embedding/data/processed/keys.csv\")\n",
+    "zero_shot = df_keys.loc[df_keys.zero_shot].index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3bb82d6c-1241-49ef-b4d9-0d5e27212b91",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balanced_df.emoji_ids = balanced_df.emoji_ids.str[1:-1].apply(lambda x: [int(y) for y in x.split(\", \")])\n",
+    "zero_shot_mask = balanced_df.emoji_ids.apply(lambda x: not any([e in x for e in zero_shot]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b088d7-d12c-4a53-af42-a3c39706cf1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "balanced_df.loc[zero_shot_mask].to_csv(\"data/twemoji_balanced_test_v2_no_zero.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d74adec-b80e-479b-98d9-d2490fd9ca3e",
    "metadata": {},
    "source": [
