--- a/1_test_with_custom_text.ipynb
+++ b/1_test_with_custom_text.ipynb
@@ -22,7 +22,7 @@
     "import torch\n",
     "\n",
     "from twemoji.twemoji_dataset import TwemojiData, TwemojiBalancedData, TwemojiDataChunks\n",
-    "from embert import SimpleSembert, TopKAccuracy, LiteralModel, Baseline\n",
+    "from embert import Sembert, TopKAccuracy, LiteralModel, Baseline\n",
     "from tqdm import tqdm"
    ]
   },
@@ -55,7 +55,7 @@
    "outputs": [],
    "source": [
     "def get_model(balanced=False):\n",
-    "    model = SimpleSembert(dropout=0.2)\n",
+    "    model = Sembert(dropout=0.2)\n",
     "    model = model.to(device)\n",
     "    if balanced:\n",
     "        pretrained_path = \"trained_models/balanced_sembert_dropout/balanced_sembert_dropout_chunk106.ckpt\"\n",
